Change history
--------------

Release Candidate 3
===================

- Introduced smtpPort, smtpUsername, smtpPassword configuration to <monorail> node


Release Candidate 2
===================

- Applied patch by Ivan Porto Carrero fixing MR-158
  "Validation throws errors when using group box."
  
  Quoting description:
  
	"When validating with the option of using a group box then the valdation routine throws an error.
	The error is only thrown after the valdation failed for a couple of controls in the form. And when those errors are corrected and the form gets validated again that's when the error occurs

	"I also added functionality to have a header in the group error box. I also added the possibility to have a separate error label to append to.
	For this I added 2 properties to the config of the validation library.
	The first property is boxErrorHeadingClass and the second one is errorSelectorCssClass

	"In the core script I added 5 lines or so to add this functionality. "

- Applied patch by Nick Hemsley fixing MR-157
  "add fromNameValueCollection method for creating IDictionary instances from (i.e.) Context.Params, or Request.QueryString"
  
  Method was renamed to FromNameValueCollection

- Introduced ARPagination.CreatePagination<T>(SimpleQuery<T>). Looks like it can be
  extended later for the non-generic SimpleQuery.

- Made all Helpers that install javascript code use the same signature Helper.InstallScripts(). Should we mandate an interface?

- Fixed the GenerateJSProxy(string proxyName, string controller), which was passing a null areaName;

- Fixed the conflict between the Array.reduce function of Prototype e fValidate scripts (MR-166).


Release Candidate 1
===================

- ARDataBinder was ovewriting ids on belongs to relations causing
  NHibernate to throw exception. Fixed and added test cases

- Fixed binder problem (MR-161)

- Fixed Perfomance issue with Brail and sub views due to cache key normalization issues.
